--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3", default-features = false, features = ["std", "derive"] }
+
+[dependencies.clap]
+version = "3"
+default-features = false
+features = ["std", "derive", "unstable-v4"]
