--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bstr = "1.3.0"
 url = "2.3.1"
+gix-url = "0.15.0"
 
 [dependencies.clap]
 version = "4"
