General Results improvements
This re-enables bubbling Results from Deps to Commands, which were
disabled for a bit. Additionally, it implements thiserror for more
errors so that bubbling will look nice. Finally, it adds anyhow::Result
as the return value for main() to automatically print the error stack
and exit with the proper exit status.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.72"
 bstr = "1"
 gix-url = "0"
 thiserror = "1"
