Add experimental z command
z is going to be a playground for testing things. In this case, z now
implements the easy part of rendering an fzf like ui for fuzzy matching.
In a future commit the (probably) harder part of actually doing matching
will be added, and the whole thing will eventually replace the tmux
command.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.72"
 bstr = "1"
+crossterm = "0.27.0"
 gix = "0"
 home = "0.5.9"
 opener = "0.6.1"
+ratatui = "0.26.0"
 thiserror = "1"
 
 [dependencies.clap]
