Disable default-features for gitoxide
This dropped the number of compiled crates from 208 to 170

Additionally, cargo update (it looks like gix 0.59 got yanked but the
next version will drop some more dependencies as well)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ edition = "2021"
 anyhow = "1.0.72"
 bstr = "1"
 crossterm = "0.27.0"
-gix = "0"
 home = "0.5.9"
 opener = "0.6.1"
 nucleo = "0.4"
@@ -20,3 +19,7 @@ thiserror = "1"
 version = "4"
 default-features = false
 features = ["std", "derive", "error-context", "help", "usage"]
+
+[dependencies.gix]
+version = "0"
+default-features = false
