--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.72"
 bstr = "1"
 crossterm = "0.27.0"
 home = "0.5.9"
+jwalk = "0.8.1"
 opener = "0.6.1"
 nucleo = "0.4"
 ratatui = "0.26.0"
@@ -23,3 +24,8 @@ features = ["std", "derive", "error-context", "help", "usage"]
 [dependencies.gix]
 version = "0"
 default-features = false
+
+[dependencies.gix-features]
+version = "0"
+default-features = false
+features = ["fs-walkdir-parallel"]
