Use gitoxide for cloning repos
Accidentally stumbled on the "clone" example in the gix folder, and it
turns out this is really easy to implement...

The output is definitely lacking compared to git, which shows both speed
and progress. Unclear if speed can be displayed but a ratatui progress
bar should be relatively simple.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ features = ["std", "derive", "error-context", "help", "usage"]
 [dependencies.gix]
 version = "0"
 default-features = false
+features = ["blocking-network-client", "max-performance-safe", "worktree-mutation"]
 
 [dependencies.gix-features]
 version = "0"
