--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ features = ["std", "derive", "error-context", "help", "usage"]
 [dependencies.gix]
 version = "0"
 default-features = false
-features = ["blocking-network-client", "max-performance-safe", "worktree-mutation"]
+features = ["blocking-http-transport-reqwest-rust-tls", "max-performance-safe", "worktree-mutation"]
 
 [dependencies.gix-features]
 version = "0"
