cargo update for url (with idna disabled)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.72"
 bstr = "1"
 home = "0.5.9"
+idna_adapter = "~1.0.0"
 jwalk = "0.8.1"
 opener = "0.7.1"
 nucleo = "0.5"
