--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ anyhow = "1.0.72"
 bstr = "1"
 home = "0.5.9"
 idna_adapter = "~1.0.0"
-jwalk = "0.8.1"
 opener = "0"
 nucleo = "0.5"
 ratatui = "0.29.0"
 thiserror = "2"
+walkdir = "2"
 
 [dependencies.clap]
 version = "4"
@@ -25,8 +25,3 @@ features = ["std", "derive", "error-context", "help", "usage"]
 version = "0"
 default-features = false
 features = ["blocking-http-transport-reqwest-rust-tls", "max-performance-safe", "worktree-mutation"]
-
-[dependencies.gix-features]
-version = "0"
-default-features = false
-features = ["fs-walkdir-parallel"]
